objects/HVCA_Part_Selector__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Comment__c</fullName>
        <label>Additional Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Layer__c</fullName>
        <label>Additional Layer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Shield_Comment__c</fullName>
        <label>Additional Shield Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Shield_Layer__c</fullName>
        <label>Additional Shield Layer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <label>Select Application</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Installation_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Indoor</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approvad</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Armour__c</fullName>
        <label>Armour</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cable_Lug__c</fullName>
        <label>Cable Lug</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>50 mm * 130 mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cable_Manufacturer__c</fullName>
        <label>Cable Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Conductor_OD__c</fullName>
        <label>Conductor OD (mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Conductor_Section__c</fullName>
        <label>Conductor Section (Kcmili)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1/0</fullName>
                </value>
                <value>
                    <fullName>2/0</fullName>
                </value>
                <value>
                    <fullName>3/0</fullName>
                </value>
                <value>
                    <fullName>4/0</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>350</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>450</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>550</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>750</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>1100</fullName>
                </value>
                <value>
                    <fullName>1250</fullName>
                </value>
                <value>
                    <fullName>1500</fullName>
                </value>
                <value>
                    <fullName>1750</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conductor_Type__c</fullName>
        <label>Conductor Type (Inch)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Conductor_Section__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Compact Diameter</fullName>
                </value>
                <value>
                    <fullName>Compressed Diameter</fullName>
                </value>
                <value>
                    <fullName>Concentric Diameter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Conductor_material__c</fullName>
        <label>Conductor Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Aluminum</fullName>
                </value>
                <value>
                    <fullName>Copper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Connectors_EPPA_047__c</fullName>
        <label>Connectors EPPA 047</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Connectors_EPPA_054__c</fullName>
        <label>Connectors EPPA 054</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creepage_distance__c</fullName>
        <label>Creepage distance</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Termination_Operating_Voltage__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2164</fullName>
                </value>
                <value>
                    <fullName>2383</fullName>
                </value>
                <value>
                    <fullName>3392</fullName>
                </value>
                <value>
                    <fullName>3827</fullName>
                </value>
                <value>
                    <fullName>4684</fullName>
                </value>
                <value>
                    <fullName>6100</fullName>
                </value>
                <value>
                    <fullName>3395</fullName>
                </value>
                <value>
                    <fullName>3829</fullName>
                </value>
                <value>
                    <fullName>4273</fullName>
                </value>
                <value>
                    <fullName>5272</fullName>
                </value>
                <value>
                    <fullName>5746</fullName>
                </value>
                <value>
                    <fullName>9436</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dry_Oil_Field__c</fullName>
        <label>Dry/Oil Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PHVX(Dry Type)</fullName>
                </value>
                <value>
                    <fullName>XHVT (Oil Filled)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EPPA_RPN_047__c</fullName>
        <label>EPPA RPN 047</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EPPA_RPN_054__c</fullName>
        <label>EPPA RPN 054</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_id__c</fullName>
        <externalId>true</externalId>
        <label>Energy Record id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Approved_Price__c</fullName>
        <label>GIS Approved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIS_Basic_Impulse_Level__c</fullName>
        <label>GIS Basic Impulse Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Design__c</fullName>
        <label>GIS Design</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Switch gear</fullName>
                </value>
                <value>
                    <fullName>Transformer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIS_Final_Approved_Price__c</fullName>
        <label>GIS Final Approved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIS_List_Price__c</fullName>
        <label>GIS List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIS_Offered_Price__c</fullName>
        <label>GIS Offered Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIS_Operating_Voltage__c</fullName>
        <label>GIS Operating Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>145</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GIS_Output__c</fullName>
        <label>GIS Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Proposed_Price_Comment__c</fullName>
        <label>GIS Proposed Price Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>GIS_Quantity__c</fullName>
        <label>GIS Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GIS_Short_Circuit_Current_Conductor__c</fullName>
        <label>GIS Short Circuit Current (Conductor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GIS_Short_Circuit_Current_Shield__c</fullName>
        <label>GIS Short Circuit Current (Shield)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HVCA_Link__c</fullName>
        <label>HVCA Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Housing_Length__c</fullName>
        <label>Housing Length</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IS_TREFOIL_CABLE_CLAMPS_SLIDER_PLATE__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS TREFOIL CABLE CLAMPS -SLIDER PLATE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IS_TREFOIL_CABLE_CLAMPS_STRUT_NUT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IS TREFOIL CABLE CLAMPS -STRUT NUT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inlet__c</fullName>
        <label>Inlet</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>D&lt;400</fullName>
                </value>
                <value>
                    <fullName>D&gt;400</fullName>
                </value>
                <value>
                    <fullName>Single Core</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Installation_Angle__c</fullName>
        <label>Installation Angle</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Installation_Group__c</fullName>
        <description>This Formula Checks for Both Installtion Type and Saves</description>
        <formula>IF(AND(isSpliceChecked__c =TRUE , isTerminationChecked__c =TRUE ,
OR (TEXT(Installation_Type__c) =&quot;Heat Shrink&quot;,TEXT(Installation_Type__c) =&quot;Cold Applied&quot;),
OR (TEXT(Splice_Installation_Type__c )=&quot;Cold Applied&quot;,TEXT(Splice_Installation_Type__c ) =&quot;Heat Shrink&quot;)),&quot;Other&quot;,
IF(AND(isSpliceChecked__c =TRUE, TEXT( Splice_Installation_Type__c )=&quot;Heat Shrink&quot;),&quot;Heat Shrink&quot;,
IF(AND(isTerminationChecked__c =TRUE, TEXT(Installation_Type__c)=&quot;Cold Applied&quot;),&quot;Cold Applied&quot;,&quot;None&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Installation Group</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Installation_Type__c</fullName>
        <label>Installation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Applied</fullName>
                </value>
                <value>
                    <fullName>Heat Shrink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insulation_Comment__c</fullName>
        <label>Insulation Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Insulation_Material__c</fullName>
        <label>Insulation Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>EPR</fullName>
                </value>
                <value>
                    <fullName>XLPE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insulation_OD__c</fullName>
        <label>Insulation OD (mm)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insulation_Thickness__c</fullName>
        <label>Insulation Thickness (mils )</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Insulator_Type__c</fullName>
        <label>Insulator Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Composite</fullName>
                </value>
                <value>
                    <fullName>Porcelain</fullName>
                </value>
                <value>
                    <fullName>Dry Type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Offered_Price__c</fullName>
        <label>Offered Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>HVCA Part Selectors</relationshipLabel>
        <relationshipName>HVCA_Part_Selectors</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outer_Jacket_Comment__c</fullName>
        <label>Outer Jacket Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outer_Jacket_Material__c</fullName>
        <label>Outer Jacket Material</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PE</fullName>
                </value>
                <value>
                    <fullName>PVC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Outer_Jacket_OD__c</fullName>
        <label>Outer Jacket OD (mm)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Outer_Jacket_Thickness__c</fullName>
        <label>Outer Jacket Thickness (mils)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <formula>Owner:User.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shielding_Comment__c</fullName>
        <label>Shielding Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shielding_Thickness__c</fullName>
        <label>Shielding Thickness</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Shielding_Type__c</fullName>
        <label>Shielding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corrugated Al/Cu</fullName>
                </value>
                <value>
                    <fullName>Copper Tape</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Copper Wire</fullName>
                </value>
                <value>
                    <fullName>Laminated Foil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splice_Additional_Output__c</fullName>
        <label>Splice Additional Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Splice_Additional_Quantity__c</fullName>
        <label>Splice Additional Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splice_Approved_Price__c</fullName>
        <label>Splice Approved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splice_Basic_Impulse_Level__c</fullName>
        <label>Splice Basic Impulse Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Splice_Conductor_OD__c</fullName>
        <label>Splice Conductor OD</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splice_Conductor_Section__c</fullName>
        <label>Splice Conductor Section(kcmil)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1/0</fullName>
                </value>
                <value>
                    <fullName>2/0</fullName>
                </value>
                <value>
                    <fullName>3/0</fullName>
                </value>
                <value>
                    <fullName>4/0</fullName>
                </value>
                <value>
                    <fullName>250</fullName>
                </value>
                <value>
                    <fullName>300</fullName>
                </value>
                <value>
                    <fullName>350</fullName>
                </value>
                <value>
                    <fullName>400</fullName>
                </value>
                <value>
                    <fullName>450</fullName>
                </value>
                <value>
                    <fullName>500</fullName>
                </value>
                <value>
                    <fullName>550</fullName>
                </value>
                <value>
                    <fullName>600</fullName>
                </value>
                <value>
                    <fullName>650</fullName>
                </value>
                <value>
                    <fullName>700</fullName>
                </value>
                <value>
                    <fullName>750</fullName>
                </value>
                <value>
                    <fullName>800</fullName>
                </value>
                <value>
                    <fullName>900</fullName>
                </value>
                <value>
                    <fullName>1000</fullName>
                </value>
                <value>
                    <fullName>1100</fullName>
                </value>
                <value>
                    <fullName>1250</fullName>
                </value>
                <value>
                    <fullName>1500</fullName>
                </value>
                <value>
                    <fullName>1750</fullName>
                </value>
                <value>
                    <fullName>2000</fullName>
                </value>
                <value>
                    <fullName>2500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splice_Conductor_Type__c</fullName>
        <label>Splice Conductor Type (Inch)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Compact Diameter</fullName>
                </value>
                <value>
                    <fullName>Compressed Diameter</fullName>
                </value>
                <value>
                    <fullName>Concentric Diameter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splice_Design__c</fullName>
        <label>Splice Design</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Splice_Installation_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Three Piece</fullName>
                </value>
                <value>
                    <fullName>Single Piece</fullName>
                </value>
                <value>
                    <fullName>Heat Shrink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splice_Final_Approved_Price__c</fullName>
        <label>Splice Final Approved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splice_Installation_Type__c</fullName>
        <label>Splice Installation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cold Applied</fullName>
                </value>
                <value>
                    <fullName>Heat Shrink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splice_Insulation_OD__c</fullName>
        <label>Splice Insulation OD</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splice_List_Price__c</fullName>
        <label>Splice List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splice_Offered_Price__c</fullName>
        <label>Splice Offered Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splice_Operating_Voltage__c</fullName>
        <label>Splice Operating Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Splice_Installation_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>46</fullName>
                </value>
                <value>
                    <fullName>69</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>145</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splice_Outer_Jacket_OD__c</fullName>
        <label>Splice Outer Jacket OD</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splice_Outer_Protection__c</fullName>
        <label>Splice Outer Protection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Wraparound</fullName>
                </value>
                <value>
                    <fullName>Copper Casing</fullName>
                </value>
                <value>
                    <fullName>Coffin Box</fullName>
                </value>
                <value>
                    <fullName>Heavy Duty (Coffin Box + Copper Casing)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splice_Output__c</fullName>
        <label>Splice Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Splice_Proposed_Price_Comment__c</fullName>
        <label>Splice Proposed Price Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Splice_Quantity__c</fullName>
        <label>Splice Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Splice_Shield_Continuity__c</fullName>
        <label>Splice Shield Continuity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Splice_Shielding_Type__c</fullName>
        <label>Splice Shielding Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Corrugated Al/Cu</fullName>
                </value>
                <value>
                    <fullName>Copper Tape</fullName>
                </value>
                <value>
                    <fullName>Lead</fullName>
                </value>
                <value>
                    <fullName>Copper Wire</fullName>
                </value>
                <value>
                    <fullName>Laminated Foil</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splice_Short_Circuit_Current_Conductor__c</fullName>
        <label>Splice Short Circuit Current (Conductor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Splice_Short_Circuit_Current_Shield__c</fullName>
        <label>Splice Short Circuit Current (Shield)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Splice_Size_Transition__c</fullName>
        <label>Splice Size Transition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splice_Type__c</fullName>
        <label>Splice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Shield Break</fullName>
                </value>
                <value>
                    <fullName>Inline</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TerminatiShort_Circuit_Current_Conductor__c</fullName>
        <label>Short Circuit Current (Conductor)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Approved_Price__c</fullName>
        <label>Termination Approved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Basic_Impulse_Level__c</fullName>
        <label>Basic Impulse Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Final_Approved_Price__c</fullName>
        <label>Termination Final Approved Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_List_Price__c</fullName>
        <label>Termination List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Offered_Price__c</fullName>
        <label>Termination Offered Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Operating_Voltage__c</fullName>
        <inlineHelpText>Other special creepage requirements are available on request</inlineHelpText>
        <label>Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Installation_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>46</fullName>
                </value>
                <value>
                    <fullName>69</fullName>
                </value>
                <value>
                    <fullName>72</fullName>
                </value>
                <value>
                    <fullName>145</fullName>
                </value>
                <value>
                    <fullName>170</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Termination_Output__c</fullName>
        <label>Termination Output</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Termination_Proposed_Price_Comment__c</fullName>
        <label>Termination Proposed Price Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Termination_Quantity__c</fullName>
        <label>Termination Quantity</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Termination_Short_Circuit_Current_Shield__c</fullName>
        <label>Short Circuit Current (Shield)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wire_Spec__c</fullName>
        <label>Wire Spec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isAccessoriessChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAccessoriessChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isAuthorizedDistributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAuthorizedDistributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isBasePlateAdapterSelecter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isBasePlateAdapterSelecter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isCableStrippingToolSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCableStrippingToolSelected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isEliteDistributor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isEliteDistributor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFMCompressionString__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFMCompressionString</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isFlatMount__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isFlatMount</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGISChecked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGISChecked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isGIS_preQuote__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isGIS_preQuote</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>